# cfd-2d

./: .gitignore  .gitmodules  CHANGELOG_MAKSIMKIN.txt  CMakeLists.txt  README.md  gasdin2d.sln  gasdin2d.vcxproj  gasdin2d.vcxproj.filters  index.html  params.json  task.xml
contrib/METIS_x64/lib/: metis.lib
contrib/hypre/include/: HYPRE_config.h
src/: CSR.cpp  CSR.h  MatrixSolver.cpp  MatrixSolver.h  MatrixSolverBoomerAMG.cpp  bnd_cond.cpp  bnd_cond.h  bnd_cond_heat.cpp  bnd_cond_heat.h  global.cpp  global.h  grid.cpp  grid.h  main.cpp
src/mesh/: MeshLoader.cpp  MeshLoader.h  MeshReader.cpp  MeshReader.h  MeshReaderBerkleyTriangle.cpp  MeshReaderGmsh.cpp  MeshReaderGmsh.h  MeshReaderMsh2.cpp  MeshReaderMsh2.h  MeshReaderSalomeUnv.cpp  grid.cpp  grid.h
src/methods/: FEM_DG.h  LimiterDG.cpp  LimiterDG.h  LimiterDGCockburn.cpp  LimiterDGCockburn.h  decomp.cpp  decomp.h  fem_dg.h  fem_dg_implicit.cpp  fem_dg_implicit.h  fem_rkdg.cpp  fem_rkdg.h  fvm_tvd.cpp  fvm_tvd.h  fvm_tvd_implicit.cpp  fvm_tvd_implicit.h  heat_dg_implicit.cpp  heat_dg_implicit.h  k_eps_model.cpp  k_eps_model.h  method.h  sa_model.cpp  sa_model.h  solver.cpp  viscosity_model.h
src/methods/solvers/: MatrixSolver.cpp  MatrixSolver.h  SolverHypre.cpp  SolverHypre.h  SolverHypreBiCGStab.cpp  SolverHypreBiCGStab.h  SolverHypreBoomerAmg.cpp  SolverHypreBoomerAmg.h  SolverHypreCustomSeidel.cpp  SolverHypreCustomSeidel.h  SolverHypreFlexGmres.cpp  SolverHypreFlexGmres.h  SolverHypreFlexGmresPrecAMG.cpp  SolverHypreFlexGmresPrecAMG.h  SolverHypreGmres.cpp  SolverHypreGmres.h  SolverHyprePcg.cpp  SolverHyprePcg.h  SolverZeidel.cpp  SolverZeidel.h
src/methods/viscosity_models/: empty_viscosity_model.cpp  empty_viscosity_model.h  k_eps_model.cpp  k_eps_model.h  sa_model.cpp  sa_model.h
